# rsfibreseq

./: .gitignore  Cargo.toml  RELEASES.md  Readme.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  mod_record.rs
