[package]
name = "rsfibreseq"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kpalin/rsfibreseq"
authors = ["Kimmo Palin <kimmo.palin@helsinki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.12"
itertools = "0.12.1"
noodles-cram = "0.53.1"
noodles-fasta = "0.32.0"
noodles-sam = "0.51.0"
noodles-util = { version = "0.34.1", features = ["alignment"] }
thiserror = "1.0.56"
##noodles-util = "0.34.1"
#noodles = { version = "0.62.1", features = ["bam","cram","sam","util"] }


[features]
debug_dinucleotides = []
default = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
